<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" 
    android:orientation="vertical"
    android:padding="15dp"
    >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
        >

        <EditText
            android:id="@+id/Number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.03"
            android:hint="@string/lblnumber"
            android:inputType="number"
            android:textSize="20sp" 
            />

        
	<!--SUBMIT BUTTON-->
        <Button
            android:id="@+id/Submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblbutton" 
            />
    </LinearLayout>

     <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"  
        />

     
     <!--PRIME & COMPOSITE-->
    <TextView
        android:id="@+id/PrimeComposite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_red_light"
        android:hint="@string/lblpc"
        android:textSize="25sp" />
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"  
        />
    
    
    <!--BINARY EQUIVALENT-->
    <TextView
        android:id="@+id/Binary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_orange_light"
        android:hint="@string/lblbinary"
        android:textSize="25sp" 
        />
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"  
        
        />
    
    
    <!--DIVISIBLE NUMBERS-->
    <TextView
        android:id="@+id/DivisibleNum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_bright"
		android:hint="@string/lbldivisible"
        android:textSize="25sp" 
        />
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"  
        />
    
   <Button
       android:id="@+id/Reset"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="@string/lblreset" />

</LinearLayout>
